@@ -59,7 +59,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.StringJoiner;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static org.ballerinalang.debugadapter.evaluation.EvaluationException.createEvaluationException;
@@ -218,7 +217,7 @@ public class EvaluationUtils {
             throw createEvaluationException(HELPER_UTIL_NOT_FOUND, methodName);
         }
         methods = methods.stream().filter(method -> method.isPublic() && method.isStatic() &&
-                compare(method.argumentTypeNames(), argTypeNames)).collect(Collectors.toList());
+                compare(method.argumentTypeNames(), argTypeNames)).toList();
         if (methods.size() != 1) {
             throw createEvaluationException(HELPER_UTIL_NOT_FOUND, methodName);
         }
@@ -239,7 +238,7 @@ public class EvaluationUtils {
         }
         methods = methods.stream()
                 .filter(method -> method.isPublic() && method.isStatic())
-                .collect(Collectors.toList());
+                .toList();
 
         if (methods.size() != 1) {
             throw createEvaluationException(HELPER_UTIL_NOT_FOUND, methodName);
@@ -633,7 +632,7 @@ public class EvaluationUtils {
             // during the runtime code generation, such local variables should be accessed in a different manner.
             List<LocalVariableProxyImpl> lambdaParamMaps = context.getFrame().visibleVariables().stream()
                     .filter(org.ballerinalang.debugadapter.variable.VariableUtils::isLambdaParamMap)
-                    .collect(Collectors.toList());
+                    .toList();
 
             Optional<Value> localVariableMatch = lambdaParamMaps.stream()
                     .map(localVariableProxy -> {
